--- a/scrumblebees/www/assets/style.css
+++ b/scrumblebees/www/assets/style.css
@@ -10,6 +10,10 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 .landingPage {
   width: 100vw;
   height: 100vh;
@@ -20,6 +24,7 @@ a {
 h3{
 color: #343a40;  
 }
+
 .btn {
 background-color:grey;
 color:rgb(255, 204, 0);
@@ -52,6 +57,10 @@ color:rgb(255, 204, 0);
   width: 90%
 }
 
+.subwidth {
+  width: 80%;
+}
+
 .honeycomb {
   background-color: #ffd65c;
   background-image: url("https://www.transparenttextures.com/patterns/honey-im-subtle.png");
@@ -78,6 +87,7 @@ margin: 50px;
 }
 
 .bee{
+  cursor: pointer;
   position: sticky;
     z-index:100;
     height: 100px;
@@ -102,4 +112,7 @@ animation-iteration-count: 5;
   50%  {right:600px; top:0px;}
   75%  {right:900px; top:0px;}
   100% {right:1200px; top:0px;}
+}
+#navbarDropdown{
+  cursor: pointer;
 }
