--- a/scrumblebees/www/assets/style.css
+++ b/scrumblebees/www/assets/style.css
@@ -15,7 +15,6 @@ a:hover {
 }
 
 .landingPage {
-  width: 100vw;
   height: 100vh;
   background-image: url('./background.jpg');
   background-size: cover;
@@ -30,6 +29,19 @@ background-color:grey;
 color:rgb(255, 204, 0);
 }
 
+.flex-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  transition: all .5s ease;
+}
+
+/* .flex-center:hover {
+
+} */
+
 .votes {
   display: flex;
     flex-direction: column;
@@ -43,14 +55,12 @@ color:rgb(255, 204, 0);
     align-items: flex-end;
 }
 
-#scroll {
-  transition: all 0.3s linear;
-  color: #343a40;
+.scroll {
+  transition: all 0.3s ease;
 }
 
-#scroll:hover {
-  transform:scale(1.2);
-  font-weight: bold;
+.scroll:hover {
+  transform: scale(1.2);
 }
 
 .commentwidth {
